--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.3.4",
     "@prisma/client": "^5.16.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
