--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.19.2",
     "framer-motion": "^11.2.14",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
